// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PillComponent matches snapshot 1`] = `
<button
  className="pill"
  onClick={[Function]}
  title="Remove test filter"
>
  test
   
  <FontAwesome
    name="times"
  />
</button>
`;

exports[`PillComponent matches snapshot with options 1`] = `
<button
  className="pill pill--common"
  onClick={[Function]}
  title="Remove test filter"
>
  test
   
  <FontAwesome
    name="times"
  />
</button>
`;
